2007-10-19  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add stub for GData

2007-10-19  Jürg Billeter  <j@bitron.ch>

	* gobject-introspection/gidlparser.c: fix state changes in `requires'
	  elements
	* vapigen/valagidlparser.vala: support flags and use name attribute
	  of object elements

2007-10-19  Jürg Billeter  <j@bitron.ch>

	* vala/valaenum.vala: support Flags attribute
	* vala/valainterfacewriter.vala: support Flags and ErrorDomain
	  attributes for enums and add `break' to keyword list

2007-10-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/gstreamer-0.10.metadata: add ellipsis
	  attribute for some functions, patch by Andrea Del Signore
	* vapi/gstreamer-0.10.vapi: regenerated

2007-10-19  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am (libvala_la_LDFLAGS): Add '-no-undefined' for
	  Cygwin and MinGW.
	* tests/testrunner.sh: Change order of link command to fix linking on
	  Cygwin, MinGW, and on Linux with -Wl,--as-needed.
	* vapigen/Makefile.am (INCLUDES): Fix VPATH build.

	Patch by Yaakov Selkowitz, fixes bug 486124

2007-10-16  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/poppler-glib/poppler-glib.gidl, vapi/poppler-glib.vapi:
	  regenerated for poppler 0.6.1, patch by Alberto Ruiz

2007-10-12  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add g_strnfill binding

2007-10-10  Jürg Billeter  <j@bitron.ch>

	* vapi/dbus-glib-1.vapi: fix some issues with the low-level API

2007-10-09  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2007-10-09  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.1.4 release

2007-10-09  Jürg Billeter  <j@bitron.ch>

	Use --basedir in build system and rename all VAPI files to .vapi,
	requires r646 to build

2007-10-09  Jürg Billeter  <j@bitron.ch>

	* vala/valacodecontext.vala, vala/valasourcefile.vala,
	  gobject/valaccodecompiler.vala,
	  gobject/valaccodegeneratorsourcefile.vala, compiler/valacompiler.vala,